@@ -1,5 +1,6 @@
 Changes in PixelLight 0.9.11-R1 (not yet released)
 - Feature: "PLRenderer::VertexBuffer": Added support for the "half" data type (16 bit floating point)
+- Feature: "PLRenderer::VertexBuffer": Added generic comfort methods "GetFloat()" and "SetFloat()"
 - Bugfix: "PLRendererOpenGLES2" font rendering worked on "Tegra 2", but failed on "PowerVR SGX 540"
 - Bugfix: Now taking into account odd OpenGL ES 2.0 "gl_FragColor" behaviour on "LG P920 Optimus 3D" (PowerVR SGX 540, Android 2.3.5, "Link Error: Fragment shader was not successfully compiled.")
 
